--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "@uc-engg/openapi-rpc-node",
-  "version": "1.0.26",
+  "version": "1.9.0",
   "description": "An RPC (OpenApi 2.0) framework for node using express",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
-    "url": "git@gitlab.urbanclap.com:urbanclap/openapi-rpc-node.git"
+    "url": "git+ssh://git@github.com:urbanclap-engg/@uc-engg/openapi-rpc-node.git"
   },
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "test": "jest",
     "unit": "jest --config=jest_config.js --runInBand",
     "prepare": "rm -rf dist && npx tsc",
     "postinstall": "node dist/scripts/post_install/index.js",
     "validatedependency": "node dist/scripts/validate_dependency/index.js"
-  },
-  "publishConfig": {
-    "registry": "http://modules.urbanclap.com:4873/"
   },
   "keywords": [
     "rpc",
@@ -26,13 +26,13 @@
     "node"
   ],
   "author": "UrbanClap Technologies India Pvt. Ltd.",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@google-cloud/profiler": "3.0.1",
     "@newrelic/native-metrics": "^4.0.0",
     "@uc-engg/armor": "^1.0.0",
     "@types/babel__traverse": "7.0.8",
-    "@uc-engg/securitas": "^1.0.7",
+    "@uc-engg/securitas": "^1.0.0",
     "agentkeepalive": "4.1.4",
     "aws-sdk": "2.846.0",
     "aws4": "^1.8.0",
@@ -72,7 +72,7 @@
     "uuid": "3.3.0",
     "@uc-engg/type-swagger": "^1.0.0",
     "@uc-engg/mycroft": "^1.0.0",
-    "typescript": "^4.0.0",
+    "typescript": "3.9.7",
     "ts-jest": "^24.0.2",
     "@uc-engg/openapi-validator-middleware": "^1.0.0"
   },
